<resources>
    <string name="app_name">Organizer</string>
    <string name="recipes">Przepisy</string>
    <string name="recipe_title">Tytuł przepisu</string>
    <string name="add_name">Podaj nazwę:</string>
    <string name="description">Opis:</string>
    <string name="add_ingredient">Dodaj składnik</string>
    <string name="ingredients_list">Składniki</string>
    <string name="items">Składniki:</string>
    <string name="no_ingredients">Lista składników jest pusta</string>
    <string name="ingredient_name">Nazwa</string>
    <string name="ingredient_unit">Jednostka</string>
    <string name="ingredient_icon">Ikona</string>
    <string name="quantity">Ilość</string>
    <string name="ok">OK</string>
    <string name="cancel">Anuluj</string>
    <string name="yes">Tak</string>
    <string name="no">Nie</string>
    <string name="fill_all_fields">Uzupełnij wszystkie pola</string>
    <string name="ingredient">Składnik</string>
    <string name="open_recipe">Podgląd</string>
    <string name="delete">Usuń</string>
    <string name="add">Dodaj</string>
    <string name="recipeUnit">Podjednostka</string>
    <string name="field_required">Pole wymagane</string>
    <string name="recipe_unit">Jednoska podstawowa</string>
    <string name="shop_unit">Jednostka sklepowa</string>
    <string name="different_unit">Inna jednostka sklepowa</string>
    <string name="quantity_in_shop_unit">Ilość w jednostce sklepowej</string>

    <string name="permission_not_granted">Nie przyznanie dostępu skutkuje ograniczeniem funkcjonalności aplikacji</string>
    <string name="external_storage_unwritable">System plików nie jest dostępny</string>
    <string name="external_storage_permission_not_granted">Nie przyznano dostępu do systemu plików</string>
    <string name="external_storage_permission_granted">Przyznano dostęp do systemu plików</string>
    <string name="mkdirs_error">Błąd podczas tworzenia folderu</string>
    <string name="delete_file_error">Błąd podczas usuwania pliku</string>
    <string name="recipes_folder">Recipes</string>
    <string name="images_folder">Images</string>
    <string name="ingredients_folder">Ingredients</string>
    <string name="backup_folder">RecipesBackup</string>

    <string name="no_recipes">Brak przepisów</string>
    <string name="recipe_image_desc">Obrazek przepisu</string>
    <string name="recipe_open_error">Błąd podczas otwierania przepisu</string>

    <string name="fridge">Lodówka</string>
    <string name="fridge_status">Aktualny stan lodówki:</string>
    <string name="planned_ingredients">Zaplanowane do posiłków:</string>
    <string name="empty_fridge">Lodówka jest pusta</string>
    <string name="add_shopping">Dodaj zakupy</string>
    <string name="set_quantity">Podaj ilość</string>
    <string name="get_ingredients_error">Nie można pobrać listy składników</string>
    <string name="choose_ingredient">Wybierz składnik</string>
    <string name="add_meal">Dodaj posiłek</string>
    <string name="clear_fridge_alert">Czy na pewno chcesz opróżnić lodówkę? Tej operacji nie można cofnąć.</string>
    <string name="using_recipe">Czy chcesz skorzystać z przepisu?</string>
    <string name="pick_recipe">Wybierz przepis</string>
    <string name="not_enough_ingredients">Nie masz wystarczającej ilości składników do tego przepisu</string>
    <string name="pick_meal_type">Wybierz rodzaj posiłku</string>
    <string name="zero_quantity">Wybrana ilość musi być większa od 0</string>
    <string name="quantity_too_large">Wybrano za dużą ilość</string>
    <string name="meal_added">Posiłek dodany do harmonogramu</string>
    <string name="clear_fridge">Wyczyść lodówkę</string>

    <string name="shopping_list">Lista zakupów</string>
    <string name="add_to_shopping_list">Dodaj do listy zakupów</string>
    <string name="add_to_fridge">Dodaj do lodówki</string>
    <string name="checked_ingredients">Zaznaczone składniki:</string>
    <string name="no_checked_items">Nie zaznaczono żadnych elementów</string>
    <string name="ingredients_added">Ilość dodanych składników:</string>
    <string name="edit_quantity">Edytuj ilość</string>
    <string name="cant_modify_checked_ingredient">Nie możesz modyfikować zaznaczonego składnika</string>
    <string name="cant_delete">Nie można usunać z listy składników dodanych przez zaplanowanie posiłków</string>
    <string name="delete_constraints">Usunięto jedynie składniki nie dodane przez planowanie posiłków</string>
    <string name="edit_constraints">Edytujesz jedynie składniki nie dodane przez planowanie posiłków</string>

    <string name="meal_schedule">Harmonogram</string>
    <string name="date_format">Dzień tygodnia, DD MM YYYY</string>
    <string name="meal">Posiłek</string>
    <string name="breakfast">Śniadanie</string>
    <string name="dinner">Obiad</string>
    <string name="supper">Kolacja</string>
    <string name="details">Szczegóły</string>
    <string name="pick_a_date">Wybierz datę</string>
    <string name="add_meal_button">Dodaj posiłek</string>
    <string name="plan_meal">Zaplanuj posiłek</string>
    <string name="shopping_list_updated">Nie masz wystarczającej ilości składników w lodówce. Lista zakupów została zaktualizowana.</string>
    <string name="meal_planned">Posiłek został zaplanowany</string>
    <string name="planned_to_other_meals">Do dodania posiłku użyte zostaną składniki zaplanowane do innego posiłku. Czy na pewno chcesz kontynuować?</string>

    <string name="add_recipe">Dodaj przepis</string>
    <string name="add_to_recipe">Dodaj do przepisu</string>
    <string name="at_least_one_ingredient">Przepis musi zawierać co najmniej jeden składnik</string>
    <string name="recipe_added">Przepis dodany</string>
    <string name="next_day">Następny dzień</string>
    <string name="previous_day">Poprzedni dzień</string>
    <string name="dragButton">dragButton</string>
</resources>
