<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="11"
            android:hint="@string/ingredient_name"
            android:inputType="textPersonName"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/recipe_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="11"
            android:hint="@string/recipe_unit"
            android:inputType="textPersonName"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <CheckBox
        android:id="@+id/subunit_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:paddingStart="8dp"
        android:text="@string/different_unit"
        android:textColor="#de000000"
        android:textSize="16sp"
        tools:ignore="RtlSymmetry" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/shop_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <android.support.design.widget.TextInputEditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="11"
            android:hint="@string/shop_unit"
            android:inputType="textPersonName"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/subunit_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <android.support.design.widget.TextInputEditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="11"
            android:hint="@string/quantity_in_shop_unit"
            android:inputType="numberDecimal"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>
</LinearLayout>