<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/shopping_list_item_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:foreground="?android:attr/selectableItemBackgroundBorderless"
    android:paddingStart="4dp"
    android:paddingTop="4dp"
    android:paddingEnd="8dp"
    android:paddingBottom="4dp">

    <ImageButton
        android:id="@+id/drag_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_add_white"
        android:layout_gravity="center"
        android:src="@drawable/ic_drag"
        android:contentDescription="@string/dragButton" />

    <CheckBox
        android:id="@+id/check_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="4dp" />

    <ImageView
        android:id="@+id/ingredient_icon"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/ingredient_icon"
        app:srcCompat="@drawable/icon_unknown" />

    <TextView
        android:id="@+id/ingredient_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:fontFamily="@font/roboto"
        android:text="@string/ingredient"
        android:textColor="#de000000"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/ingredient_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="16dp"
        android:layout_weight="1"
        android:fontFamily="@font/roboto"
        android:gravity="end"
        android:text="@string/quantity"
        android:textColor="#de000000"
        android:textSize="16sp"
        android:textStyle="bold" />

</LinearLayout>