<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ingredient_with_quantity_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="4dp"
    android:paddingBottom="4dp">

    <ImageView
        android:id="@+id/ingredient_icon"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/ingredient_icon"
        app:srcCompat="@drawable/icon_unknown"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

    <TextView
        android:id="@+id/ingredient_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:fontFamily="@font/roboto"
        android:text="@string/ingredient"
        android:textColor="#de000000"
        android:ellipsize="end"
        android:maxLines="1"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/ingredient_quantity"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="end"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/roboto"
        android:text="@string/quantity"
        android:textColor="#de000000"
        android:ellipsize="end"
        android:maxLines="1"
        android:textSize="16sp"
        android:textStyle="bold" />
</LinearLayout>