<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            app:title="@string/add_recipe"
            app:titleTextColor="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/ic_close">

            <Button
                android:id="@+id/add_button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:fontFamily="@font/roboto"
                android:text="@string/add"
                android:textColor="#ffffff"
                android:textSize="14sp"
                android:paddingTop="12dp"
                android:paddingBottom="8dp" />

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/add_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:fontFamily="@font/roboto"
                android:hint="@string/recipe_title"
                android:importantForAutofill="no"
                android:inputType="text"
                android:singleLine="true"
                android:textColor="#de000000"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/items"
                    android:layout_margin="8dp"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto"/>

                <ImageButton
                    android:id="@+id/add_ingredient_button"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="10dp"
                    android:foreground="?android:attr/selectableItemBackgroundBorderless"
                    android:background="@color/cardview_light_background"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_add_black"
                    android:contentDescription="@string/add_ingredient" />
            </LinearLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/ingredients_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:listitem="@layout/ingredients_with_quantity_item"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"/>

            <EditText
                android:id="@+id/add_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:inputType="textMultiLine"
                android:importantForAutofill="no"
                android:hint="@string/description"
                android:textColor="#de000000"
                android:textSize="24sp"
                android:layout_margin="16dp"/>

        </LinearLayout>

    </ScrollView>
</android.support.design.widget.CoordinatorLayout>