<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linear_layout"
    android:layout_width="344dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_margin="5dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <TextView
            android:id="@+id/recipe_title"
            android:layout_width="188dp"
            android:layout_height="wrap_content"
            android:minHeight="70dp"
            android:ellipsize="end"
            android:fontFamily="@font/roboto"
            android:gravity="bottom"
            android:maxLines="3"
            android:paddingStart="16dp"
            android:text="@string/recipe_title"
            android:textColor="#de000000"
            android:textSize="22sp"
            tools:ignore="RtlSymmetry" />

        <ImageView
            android:id="@+id/recipe_image"
            android:layout_width="140dp"
            android:layout_height="80dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/recipe_image_desc"
            app:srcCompat="@drawable/recipe_default_image" />

    </LinearLayout>

    <TextView
        android:id="@+id/recipe_details"
        android:layout_width="188dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:gravity="bottom"
        android:paddingStart="16dp"
        android:text="@string/details"
        android:textColor="#99000000"
        tools:ignore="RtlSymmetry" />

    <View
        android:id="@+id/divider"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="8dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>

</LinearLayout>