<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/ingredient_icon"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/ingredient_icon"
            app:srcCompat="@drawable/icon_unknown" />

        <TextView
            android:id="@+id/ingredient_name"
            style="@style/Platform.Widget.AppCompat.Spinner"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:clickable="true"
            android:fontFamily="@font/roboto"
            android:hint="@string/choose_ingredient"
            android:minWidth="280dp"
            android:textAlignment="center"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginHorizontal="30dp">

        <EditText
            android:id="@+id/ingredient_quantity"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:hint="@string/set_quantity"
            android:importantForAutofill="no"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/ingredient_unit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/roboto"
            android:textAlignment="center"
            android:textColor="#de000000"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>